# FlaxAttention

./: .gitmodules  LICENSE.txt  meson.build  pyproject.toml
csrc/: flash_api.cu
